--- a/src/components/SEO.astro
+++ b/src/components/SEO.astro
@@ -67,8 +67,8 @@ const twitterUrl = socialMedia?.twitter?.url || '';
 <script type="application/ld+json" set:html={JSON.stringify({
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Snacks Yummies",
-  "url": "https://snacksyummies.com",
+  "name": "Yummi Nuts",
+  "url": "https://yumminuts.com",
   "logo": "https://snack.yummiespromociones.com/snacksyummies/logo.webp",
   "sameAs": [
     socialMedia.facebook?.url,
@@ -86,7 +86,7 @@ const twitterUrl = socialMedia?.twitter?.url || '';
       "@type": "ListItem",
       "position": 1,
       "name": currentLang === 'es' ? 'Inicio' : 'Home',
-      "item": `https://snacksyummies.com/${currentLang}`
+      "item": `https://yumminuts.com/${currentLang}`
     }
   ]
 })}></script>
