--- a/src/components/common/Categories/index.astro
+++ b/src/components/common/Categories/index.astro
@@ -22,8 +22,9 @@ const displayProducts = products.slice(0, 3);
 ---
 
 <div class="box-border content-stretch flex flex-col gap-[50px] items-start justify-start  py-0 relative size-full">
-  <div class="font-sans leading-[0] not-italic relative shrink-0 text-black text-[55px] text-nowrap tracking-[-2px] font-extrabold">
-    <p class="leading-[normal] whitespace-pre">{title}</p>
+  <div class="font-sans leading-[0] not-italic relative shrink-0 text-black text-[55px] text-nowrap tracking-[-2px] font-extrabold" data-reveal-child>
+    <h2 class="font-heading leading-none not-italic text-black text-4xl md:text-6xl tracking-tight text-left">
+      {title}</h2>
   </div>
 
   <div class="content-stretch flex flex-col gap-[10px] items-start justify-start relative shrink-0 w-full">
@@ -31,7 +32,7 @@ const displayProducts = products.slice(0, 3);
       <!-- Products container with justify-between -->
       <div class="content-stretch flex items-center justify-between  relative shrink-0 w-full">
         {displayProducts.map((product, index) => (
-          <div class="content-stretch flex flex-col  h-[421px] items-start justify-start relative shrink-0 w-[350px]">
+          <div class="content-stretch flex flex-col  h-[421px] items-start justify-start relative shrink-0 w-[350px] opacity-0 translate-y-6 transition-all duration-700 ease-out" data-reveal-child>
             <div class="h-[374.054px] overflow-clip relative shrink-0 w-[275px]">
               <div class="absolute inset-0 rounded-lg bg-center bg-cover bg-no-repeat" style={`background-image: url('${product.bgColor}')`}></div>
               <div class="absolute bg-center bg-cover bg-no-repeat h-[344.27px] shadow-[8.262px_4.957px_8.51px_0px_rgba(22,22,22,0.03)] translate-x-[-50%] translate-y-[-50%] w-[181.064px] hover:scale-110 transition-all duration-300" style={{ top: "calc(50% + 0.143px)", left: "calc(50% - 0.158px)", backgroundImage: `url('${product.image}')` }}></div>
