--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -16,7 +16,7 @@ const { title, images } = Astro.props;
 ---
 
 <div class="box-border flex flex-col gap-12 items-left justify-start container mx-auto  py-0 relative w-full bg-white">
-  <h2 class="font-heading font-bold leading-none not-italic text-black text-4xl md:text-6xl tracking-tight text-left">
+  <h2 class="font-heading leading-none not-italic text-black text-4xl md:text-6xl tracking-tight text-left">
     {title}
   </h2>
   <div class="flex items-center justify-evenly gap-12 md:justify-between w-full ">
