--- a/src/components/common/Footer/index.astro
+++ b/src/components/common/Footer/index.astro
@@ -38,31 +38,45 @@ const youtubeUrl = t('social_media.youtube.url', { namespace: 'common', locale: 
 const youtubeIconUrl = t('social_media.youtube.iconUrl', { namespace: 'common', locale: currentLang });
 const youtubeText = t('social_media.youtube.text', { namespace: 'common', locale: currentLang });
 
-// Obtener el logo específico de Zibas desde brands.json
-const zibasLogo = 'https://snack.yummiespromociones.com/SnacksyummiesAssets/zibas-logo-3.webp';
+// Obtener el logo específico de Yumminuts desde brands.json
+const logoYumminuts = 'https://snack.yummiespromociones.com/SnacksyummiesAssets/logo-blue-yumminuts.webp';
 ---
 
 {loading ? (
   <Skeleton />
 ) : (
-  <footer class="bg-secondary text-primary relative overflow-hidden">
-    <div class="container mx-auto px-6 py-8 md:py-8 flex flex-col md:flex-row items-start md:items-center justify-between">
-      <div class="flex flex-col gap-12 items-start justify-start pl-2.5 pr-0 py-0 relative shrink-0 w-full md:w-1/2 lg:w-[670px]">
-        <div class="font-title text-3xl md:text-4xl font-normal relative text-primary">
-          {t('footer.newsletter', { namespace: 'common', locale: currentLang })}
+  <footer class="bg-secondary text-primary relative overflow-hidden py-16">
+    <div class="container mx-auto px-6 py-8 md:py-8 flex flex-col md:flex-row items-start  justify-between">
+      <div class="flex flex-col gap-12 items-start justify-start pl-2.5 pr-0 py-0 relative shrink-0 w-full md:w-1/3 ">
+        <div class="font-title font-normal relative text-primary">
+          <div class="flex flex-col gap-6 items-start justify-start relative shrink-0">
+            <h3 class="text-3xl md:text-4xl">
+            {t('footer.newsletter', { namespace: 'common', locale: currentLang })}
+          </h3>
+          <br/>
+          <span>
+            {currentLang === 'es' ? ' Únete a nuestra comunidad registrándote en' : 'Join our community by registering in'}
+          </span>
+          <br/>
+          </div>
+         <div>
+          <a href="https://snacksyummies.com/yummiesone" target="_blank" rel="noopener noreferrer" class="hover:underline hover:text-blue p-4 bg-[#A1C8EA] text-primary rounded ">
+            {currentLang === 'es' ? 'Registrate en Yummies One' : 'Register in YummiesOne'}
+          </a>
+         </div>
         </div>
         
       </div>
-      <div class="flex items-start justify-between pl-0 pr-2.5 py-0 relative shrink-0 w-full md:w-1/2 lg:w-[670px] mt-8 md:mt-0">
+      <div class="flex items-start justify-between pl-0 pr-2.5 py-0 relative shrink-0 w-full md:w-2/3 mt-8 md:mt-0">
         <div class="flex flex-col gap-12 items-start justify-start relative shrink-0">
           <div class="font-title text-3xl md:text-4xl font-normal relative text-primary">
             {t('footer.home', { namespace: 'common', locale: currentLang })}
           </div>
           <div class="flex flex-col font-sans gap-6 items-start justify-start leading-relaxed not-italic relative shrink-0 text-primary text-lg">
-            <a href={`/${currentLang}/products`} class="hover:underline">{t('footer.products', { namespace: 'common', locale: currentLang })}</a>
-            <a href={`/${currentLang}/health`} class="hover:underline">{t('footer.health', { namespace: 'common', locale: currentLang })}</a>
-            <a href={`/${currentLang}/news`} class="hover:underline">{t('footer.latest_news', { namespace: 'common', locale: currentLang })}</a>
-            <a href={`/${currentLang}/contact`} class="hover:underline">{t('footer.contact', { namespace: 'common', locale: currentLang })}</a>
+            <a href={`/${currentLang}/products`} class="hover:underline hover:text-blue">{t('footer.products', { namespace: 'common', locale: currentLang })}</a>
+            <a href={`/${currentLang}/health`} class="hover:underline hover:text-blue">{t('footer.health', { namespace: 'common', locale: currentLang })}</a>
+            <a href={`/${currentLang}/news`} class="hover:underline hover:text-blue">{t('footer.latest_news', { namespace: 'common', locale: currentLang })}</a>
+            <a href={`/${currentLang}/contact`} class="hover:underline hover:text-blue">{t('footer.contact', { namespace: 'common', locale: currentLang })}</a>
           </div>
         </div>
         <div class="flex flex-col gap-12 items-start justify-start relative shrink-0">
@@ -70,10 +84,10 @@ const zibasLogo = 'https://snack.yummiespromociones.com/SnacksyummiesAssets/ziba
             {t('footer.support', { namespace: 'common', locale: currentLang })}
           </div>
           <div class="flex flex-col font-sans gap-6 items-start justify-start leading-relaxed not-italic relative shrink-0 text-primary text-lg">
-            <a href="#" class="hover:underline">{t('footer.privacy_policy', { namespace: 'common', locale: currentLang })}</a>
-            <a href="#" class="hover:underline">{t('footer.cookie_policy', { namespace: 'common', locale: currentLang })}</a>
-            <a href="#" class="hover:underline">{t('footer.terms_conditions', { namespace: 'common', locale: currentLang })}</a>
-            <a href="#" class="hover:underline">{t('footer.complaints_book', { namespace: 'common', locale: currentLang })}</a>
+            <a href="#" class="hover:underline hover:text-blue">{t('footer.privacy_policy', { namespace: 'common', locale: currentLang })}</a>
+            <a href="#" class="hover:underline hover:text-blue">{t('footer.cookie_policy', { namespace: 'common', locale: currentLang })}</a>
+            <a href="#" class="hover:underline hover:text-blue">{t('footer.terms_conditions', { namespace: 'common', locale: currentLang })}</a>
+            <a href="#" class="hover:underline hover:text-blue">{t('footer.complaints_book', { namespace: 'common', locale: currentLang })}</a>
           </div>
         </div>
         <div class="flex flex-col gap-10 items-start justify-start relative shrink-0">
@@ -81,11 +95,16 @@ const zibasLogo = 'https://snack.yummiespromociones.com/SnacksyummiesAssets/ziba
             {t('footer.help', { namespace: 'common', locale: currentLang })}
           </div>
           <div class="flex gap-4 items-center justify-start relative shrink-0">
-            <a href={instagramUrl} target="_blank" rel="noopener noreferrer">
-              <LazyImage src={instagramIconUrl} alt={instagramText} class="h-8 w-8" />
+            <a href={instagramUrl} target="_blank" rel="noopener noreferrer" class="hover:text-blue">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
+<path d="M11.3832 15.6839C11.3832 13.303 13.3127 11.3724 15.6936 11.3724C18.0745 11.3724 20.0051 13.303 20.0051 15.6839C20.0051 18.0648 18.0745 19.9953 15.6936 19.9953C13.3127 19.9953 11.3832 18.0648 11.3832 15.6839ZM9.05249 15.6839C9.05249 19.3518 12.0257 22.325 15.6936 22.325C19.3615 22.325 22.3348 19.3518 22.3348 15.6839C22.3348 12.016 19.3615 9.04273 15.6936 9.04273C12.0257 9.04273 9.05249 12.016 9.05249 15.6839ZM21.0457 8.77941C21.0456 9.08637 21.1365 9.38646 21.3068 9.64176C21.4773 9.89706 21.7197 10.0961 22.0032 10.2137C22.2867 10.3312 22.5988 10.3621 22.8998 10.3023C23.2009 10.2426 23.4776 10.0949 23.6946 9.8779C23.9117 9.66093 24.0597 9.38445 24.1197 9.08342C24.1797 8.78238 24.1491 8.47031 24.0318 8.18667C23.9145 7.90304 23.7155 7.66057 23.4604 7.48992C23.2053 7.31929 22.9053 7.22815 22.5982 7.22802C22.1867 7.22822 21.7917 7.39171 21.5007 7.68259C21.2097 7.97346 21.046 8.36796 21.0457 8.77941ZM10.4685 26.2114C9.20759 26.1539 8.52223 25.9439 8.06676 25.7665C7.46293 25.5313 7.03209 25.2513 6.57912 24.799C6.12614 24.3466 5.84574 23.9162 5.6117 23.3124C5.43415 22.8571 5.22411 22.1715 5.16679 20.9106C5.10409 19.5473 5.09157 19.1378 5.09157 15.684C5.09157 12.2301 5.10513 11.8217 5.16679 10.4573C5.22422 9.19638 5.43581 8.51215 5.6117 8.05555C5.84678 7.45172 6.12676 7.02088 6.57912 6.5679C7.03147 6.11492 7.4619 5.83453 8.06676 5.60049C8.52202 5.42294 9.20759 5.2129 10.4685 5.15558C11.8318 5.09288 12.2413 5.08036 15.6936 5.08036C19.1459 5.08036 19.5558 5.09391 20.9203 5.15558C22.1813 5.213 22.8654 5.42459 23.322 5.60049C23.9258 5.83453 24.3567 6.11554 24.8097 6.5679C25.2626 7.02026 25.542 7.45172 25.7771 8.05555C25.9547 8.51081 26.1647 9.19638 26.222 10.4573C26.2848 11.8217 26.2972 12.2301 26.2972 15.684C26.2972 19.1378 26.2848 19.5462 26.222 20.9106C26.1646 22.1715 25.9535 22.857 25.7771 23.3124C25.542 23.9162 25.262 24.347 24.8097 24.799C24.3573 25.2509 23.9258 25.5313 23.322 25.7665C22.8667 25.9439 22.1813 26.1539 20.9203 26.2114C19.557 26.274 19.1475 26.2865 15.6936 26.2865C12.2398 26.2865 11.8314 26.274 10.4685 26.2114ZM10.3615 2.82881C8.98462 2.89151 8.0438 3.10983 7.22216 3.42954C6.37125 3.75971 5.65091 4.20265 4.93109 4.92133C4.21127 5.64001 3.76947 6.36149 3.43931 7.2124C3.11959 8.03455 2.90128 8.97485 2.83858 10.3517C2.77484 11.7307 2.76025 12.1716 2.76025 15.6839C2.76025 19.1962 2.77484 19.6371 2.83858 21.016C2.90128 22.3929 3.11959 23.3332 3.43931 24.1553C3.76947 25.0057 4.21138 25.728 4.93109 26.4464C5.65081 27.1648 6.37125 27.6071 7.22216 27.9382C8.04535 28.2579 8.98462 28.4763 10.3615 28.5389C11.7412 28.6016 12.1813 28.6172 15.6936 28.6172C19.2059 28.6172 19.6468 28.6026 21.0258 28.5389C22.4027 28.4763 23.3429 28.2579 24.1651 27.9382C25.0155 27.6071 25.7364 27.1651 26.4561 26.4464C27.176 25.7277 27.6169 25.0057 27.948 24.1553C28.2677 23.3332 28.4871 22.3929 28.5486 21.016C28.6113 19.636 28.626 19.1962 28.626 15.6839C28.626 12.1716 28.6113 11.7307 28.5486 10.3517C28.486 8.97475 28.2677 8.03403 27.948 7.2124C27.6169 6.362 27.1748 5.64115 26.4561 4.92133C25.7374 4.20151 25.0155 3.75971 24.1661 3.42954C23.3429 3.10983 22.4027 2.89048 21.0268 2.82881C19.6479 2.76611 19.207 2.75049 15.6947 2.75049C12.1824 2.75049 11.7412 2.76508 10.3615 2.82881Z" fill="#385CAD"/>
+<path d="M11.3832 15.6839C11.3832 13.303 13.3127 11.3724 15.6936 11.3724C18.0745 11.3724 20.0051 13.303 20.0051 15.6839C20.0051 18.0648 18.0745 19.9953 15.6936 19.9953C13.3127 19.9953 11.3832 18.0648 11.3832 15.6839ZM9.05249 15.6839C9.05249 19.3518 12.0257 22.325 15.6936 22.325C19.3615 22.325 22.3348 19.3518 22.3348 15.6839C22.3348 12.016 19.3615 9.04273 15.6936 9.04273C12.0257 9.04273 9.05249 12.016 9.05249 15.6839ZM21.0457 8.77941C21.0456 9.08637 21.1365 9.38646 21.3068 9.64176C21.4773 9.89706 21.7197 10.0961 22.0032 10.2137C22.2867 10.3312 22.5988 10.3621 22.8998 10.3023C23.2009 10.2426 23.4776 10.0949 23.6946 9.8779C23.9117 9.66093 24.0597 9.38445 24.1197 9.08342C24.1797 8.78238 24.1491 8.47031 24.0318 8.18667C23.9145 7.90304 23.7155 7.66057 23.4604 7.48992C23.2053 7.31929 22.9053 7.22815 22.5982 7.22802C22.1867 7.22822 21.7917 7.39171 21.5007 7.68259C21.2097 7.97346 21.046 8.36796 21.0457 8.77941ZM10.4685 26.2114C9.20759 26.1539 8.52223 25.9439 8.06676 25.7665C7.46293 25.5313 7.03209 25.2513 6.57912 24.799C6.12614 24.3466 5.84574 23.9162 5.6117 23.3124C5.43415 22.8571 5.22411 22.1715 5.16679 20.9106C5.10409 19.5473 5.09157 19.1378 5.09157 15.684C5.09157 12.2301 5.10513 11.8217 5.16679 10.4573C5.22422 9.19638 5.43581 8.51215 5.6117 8.05555C5.84678 7.45172 6.12676 7.02088 6.57912 6.5679C7.03147 6.11492 7.4619 5.83453 8.06676 5.60049C8.52202 5.42294 9.20759 5.2129 10.4685 5.15558C11.8318 5.09288 12.2413 5.08036 15.6936 5.08036C19.1459 5.08036 19.5558 5.09391 20.9203 5.15558C22.1813 5.213 22.8654 5.42459 23.322 5.60049C23.9258 5.83453 24.3567 6.11554 24.8097 6.5679C25.2626 7.02026 25.542 7.45172 25.7771 8.05555C25.9547 8.51081 26.1647 9.19638 26.222 10.4573C26.2848 11.8217 26.2972 12.2301 26.2972 15.684C26.2972 19.1378 26.2848 19.5462 26.222 20.9106C26.1646 22.1715 25.9535 22.857 25.7771 23.3124C25.542 23.9162 25.262 24.347 24.8097 24.799C24.3573 25.2509 23.9258 25.5313 23.322 25.7665C22.8667 25.9439 22.1813 26.1539 20.9203 26.2114C19.557 26.274 19.1475 26.2865 15.6936 26.2865C12.2398 26.2865 11.8314 26.274 10.4685 26.2114ZM10.3615 2.82881C8.98462 2.89151 8.0438 3.10983 7.22216 3.42954C6.37125 3.75971 5.65091 4.20265 4.93109 4.92133C4.21127 5.64001 3.76947 6.36149 3.43931 7.2124C3.11959 8.03455 2.90128 8.97485 2.83858 10.3517C2.77484 11.7307 2.76025 12.1716 2.76025 15.6839C2.76025 19.1962 2.77484 19.6371 2.83858 21.016C2.90128 22.3929 3.11959 23.3332 3.43931 24.1553C3.76947 25.0057 4.21138 25.728 4.93109 26.4464C5.65081 27.1648 6.37125 27.6071 7.22216 27.9382C8.04535 28.2579 8.98462 28.4763 10.3615 28.5389C11.7412 28.6016 12.1813 28.6172 15.6936 28.6172C19.2059 28.6172 19.6468 28.6026 21.0258 28.5389C22.4027 28.4763 23.3429 28.2579 24.1651 27.9382C25.0155 27.6071 25.7364 27.1651 26.4561 26.4464C27.176 25.7277 27.6169 25.0057 27.948 24.1553C28.2677 23.3332 28.4871 22.3929 28.5486 21.016C28.6113 19.636 28.626 19.1962 28.626 15.6839C28.626 12.1716 28.6113 11.7307 28.5486 10.3517C28.486 8.97475 28.2677 8.03403 27.948 7.2124C27.6169 6.362 27.1748 5.64115 26.4561 4.92133C25.7374 4.20151 25.0155 3.75971 24.1661 3.42954C23.3429 3.10983 22.4027 2.89048 21.0268 2.82881C19.6479 2.76611 19.207 2.75049 15.6947 2.75049C12.1824 2.75049 11.7412 2.76508 10.3615 2.82881Z" fill="#385CAD"/>
+</svg>
             </a>
-            <a href={facebookUrl} target="_blank" rel="noopener noreferrer">
-              <LazyImage src={facebookIconUrl} alt={facebookText} class="h-8 w-8" />
+            <a href={facebookUrl} target="_blank" rel="noopener noreferrer" class="hover:text-blue">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
+<path d="M13.3345 0.344727C20.1917 0.344727 25.7505 5.90357 25.7505 12.7608C25.7505 18.958 21.2101 24.0945 15.2745 25.026V16.3498H18.1676L18.718 12.7608L15.2745 12.7603V10.4317C15.2745 10.424 15.2745 10.4164 15.2746 10.4087C15.2746 10.3972 15.2749 10.3858 15.275 10.3742C15.2937 9.41282 15.7857 8.49275 17.2978 8.49275H18.8635V5.43724C18.8635 5.43724 17.4426 5.19426 16.0841 5.19426C13.2923 5.19426 11.4525 6.85999 11.3959 9.88054C11.395 9.92834 11.3945 9.97639 11.3945 10.0248V12.7603H8.24198V16.3493L11.3945 16.3498V25.0255C5.45883 24.094 0.918457 18.958 0.918457 12.7608C0.918457 5.90357 6.4773 0.344727 13.3345 0.344727Z" fill="#385CAD" fill-opacity="0.85"/>
+</svg>
             </a>
             
           </div>
@@ -93,12 +112,12 @@ const zibasLogo = 'https://snack.yummiespromociones.com/SnacksyummiesAssets/ziba
       </div>
     </div>
     
-    <div class="w-full border-t border-white border-[1.5px] mt-6 pt-6">
-        <div class="container mx-auto">
+    {/* <div class="w-full bg-blue mt-6 pt-6 mb-8">
+        <div class="container mx-auto mb-8">
           <div class="text-center mb-4">
             <h3 class="text-white  font-sans text-xl font-medium">DINANT - Contacto</h3>
           </div>
-          <div class="grid grid-cols-2 md:grid-cols-3 gap-4 justify-items-center">
+          <div class="grid grid-cols-2 md:grid-cols-3 gap-4 justify-items-center text-white mb-8 py-4">
             <!-- Guatemala -->
             <div class="flex items-center space-x-2">
               <span class="text-2xl" role="img" aria-label="Guatemala">🇬🇹</span>
@@ -131,7 +150,7 @@ const zibasLogo = 'https://snack.yummiespromociones.com/SnacksyummiesAssets/ziba
             </div>
           </div>
         </div>
-      </div>
+      </div> */}
   </footer>
 )}
 
