--- a/src/components/common/Header/index.astro
+++ b/src/components/common/Header/index.astro
@@ -80,11 +80,11 @@ if (headerColors) {
         <a href={`/${currentLang}/`} class="flex-shrink-0">
           <LocalizedImage
             src={logosData.principal.url}
-            alt={logosData.principal.alt || "Ziba's Logo"}
+            alt={logosData.principal.alt || "Yummi Nuts Logo"}
             class="h-12 w-auto object-contain"
             loading="eager"
-            width="120"
-            height="48"
+            width="100"
+            height="40"
             priority={true}
           />
         </a>
