--- a/src/components/common/Discover/index.astro
+++ b/src/components/common/Discover/index.astro
@@ -1,4 +1,5 @@
 ---
+
 export interface Props {
   title: string;
   images: Array<{
@@ -19,26 +20,46 @@ const { title, images } = Astro.props;
   <h2 class="font-heading leading-none not-italic text-black text-4xl md:text-6xl tracking-tight text-left">
     {title}
   </h2>
-  <div class="flex items-center justify-evenly gap-12 md:justify-between w-full ">
-    {images.map((image) => (
-      <a href={image.link} class="group overflow-hidden relative flex-1 aspect-square rounded-2xl bg-cover bg-center bg-no-repeat hover:scale-105 hover:shadow-2xl transition-transform" style={`background-image: url('${image.desktop}')`}>
-        <img src={image.desktop} alt={image.alt} class="w-full h-full object-cover rounded-2xl" />
-        <div class="absolute inset-0 bg-black bg-opacity-50 flex flex-col items-center justify-center text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-          <p class="text-lg font-bold mb-2">Shop Now</p>
-          <div class="flex items-center mb-2">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z" fill="currentColor"/>
-            </svg>
-            <span class="ml-2">@yummi.nuts</span>
-          </div>
-          <div class="flex items-center">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" fill="currentColor"/>
-            </svg>
-            <span class="ml-2">20 likes</span>
-          </div>
-        </div>
-      </a>
-    ))}
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-6 md:gap-8 w-full">
+    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
+      <iframe
+        src="https://www.instagram.com/reel/DPCEX3gETX7/embed"
+        class="w-full h-full"
+        allowtransparency="true"
+        allowfullscreen
+        frameborder="0"
+        scrolling="no"
+      ></iframe>
+    </div>
+    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
+      <iframe
+        src="https://www.instagram.com/reel/DPP-dSREWWZ/embed"
+        class="w-full h-full"
+        allowtransparency="true"
+        allowfullscreen
+        frameborder="0"
+        scrolling="no"
+      ></iframe>
+    </div>
+    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
+      <iframe
+        src="https://www.instagram.com/reel/DPP-dSREWWZ/embed"
+        class="w-full h-full"
+        allowtransparency="true"
+        allowfullscreen
+        frameborder="0"
+        scrolling="no"
+      ></iframe>
+    </div>
+    <div class="w-full aspect-[9/16] overflow-hidden rounded-xl">
+      <iframe
+        src="https://www.instagram.com/reel/DPCEX3gETX7/embed"
+        class="w-full h-full"
+        allowtransparency="true"
+        allowfullscreen
+        frameborder="0"
+        scrolling="no"
+      ></iframe>
+    </div>
   </div>
 </div>
