--- a/src/components/common/Header/index.astro
+++ b/src/components/common/Header/index.astro
@@ -77,7 +77,7 @@ if (headerColors) {
     >
       <!-- Logo para Móvil -->
       <div class="logo-container">
-        <a href={`/${currentLang}/`} class="flex-shrink-0">
+        <a href={`/${currentLang}/`} data-astro-reload class="flex-shrink-0">
           <LocalizedImage
             src={logosData.principal.url}
             alt={logosData.principal.alt || "Yummi Nuts Logo"}
