--- a/src/views/Home/index.astro
+++ b/src/views/Home/index.astro
@@ -113,7 +113,7 @@ const discoverAssets = t('assets.discoverSection', { namespace: 'common', locale
     </section>
 
     <!-- Sección Descubrenos -->
-    <section id="discover" class="w-full bg-white py-16 reveal-on-scroll opacity-0 translate-y-6 transition-all duration-700 ease-out">
+    <section id="discover" class="w-container mx-auto px-4 bg-white py-16 reveal-on-scroll opacity-0 translate-y-6 transition-all duration-700 ease-out">
       <Discover title={discoverAssets.title} images={discoverAssets.images || []} />
     </section>
 
